overflow corrected in Relvise

--- a/Relvise/scss/adaptive.scss
+++ b/Relvise/scss/adaptive.scss
@@ -73,7 +73,6 @@
   }
   .advice-card {
     margin-bottom: 20px;
-    align-self: flex-end;
   }
   .newsletter {
     &__title {
